--- a/templates/Add_resources.html
+++ b/templates/Add_resources.html
@@ -56,7 +56,7 @@
 <img src="static/pic/study" alt="">
 <div style=" display: flex; justify-content: center; align-items: center; background-color: rgb(233, 245, 250);background-repeat: no-repeat;  height: 100%; padding: 10px 50px;">
     <img src="{{ url_for('static', filename='pic/brac_logo.gif') }}">
-    <form method="POST" action='/Add_resources' enctype="multipart/form-data">
+    <form method="POST" action="{{ url_for('Add_resources') }}" enctype="multipart/form-data">
         <style>
     .box {
         position: absolute;
