file upload done

--- a/templates/Add_resources.html
+++ b/templates/Add_resources.html
@@ -124,16 +124,14 @@
                     <label for="Course_Code">Course Code</label>
                     <input type="text" name="Course_Code" id="Course_Code">
                 </div>
-                <div class="form-group" > 
-                    <label for="type">Uploaded file Type</label>
-                    <select id="type" name="type">
-                        <option value="1">select</option>
-                      <option value="2">Theory</option>
-                      <option value="3">Lab</option>
-                      
+                <div class="form-group">
+                    <label for="f_type">File Type</label>
+                    <select class="form-control" name="f_type" id="f_type">
+                        <option value="theory">Theory</option>
+                        <option value="lab">Lab</option>
                     </select>
-                   
-                  </div>
+                </div>
+                
                 
                   
                 <div class="form-group">
