Work for community

--- a/templates/Add_resources.html
+++ b/templates/Add_resources.html
@@ -48,7 +48,7 @@
 
         </li>
         <li> <a href="#">Thesis</a></li>
-        <li><a href="Course Information.html">Course Info</a></li>
+        <li><a href="/courseinfo">Course Info</a></li>
         <li> <a href="#">Contact Us</a></li>
         <li> <a href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">Calendar</a></li>
     </ul>
@@ -100,7 +100,7 @@
 
     ::placeholder {
         color: #9fc6ee;
-        text-decoration: underline; /* Modified text decoration for placeholders */
+        text-decoration: underline; 
     }
 </style>
 
@@ -115,11 +115,7 @@
                     <label for="student_id">Student Id</label>
                     <input type="text" name="student_id" id="student_id">
                 </div>
-<!--                 
-                <div class="form-group">
-                    <label for="Department">Department</label>
-                    <input type="text" name="Department" id="Department">
-                </div> -->
+
                 <div class="form-group">
                     <label for="Course_Code">Course Code</label>
                     <input type="text" name="Course_Code" id="Course_Code">
