--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
                     <li><a href="/index">Home</a></li>
                     <li><a href="/Add_resources">Add-Resources</a></li>
                     <li><a href="/faculty">Faculties</a></li>
-                    <li><a href="/Courses">Courses</a></li>
+                    <li><a href="/community">Community</a></li>
                    
                     
                     <form action="/search" method="SEARCH" class="searchbar">
