--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@ welcome {{request.user}}
         </li>
         <li> <a href="#">Thesis</a></li>
         <li> <a href="/faculty">Faculty Informations</a></li>
-        <li><a href="/CourseInformation">Course Info</a></li>
+        <li><a href="\courseinfo">Course Info</a></li>
         <li> <a href="#">Contract Us</a></li>
         <li> <a href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">calender</a></li>
 
