--- a/templates/search.html
+++ b/templates/search.html
@@ -48,7 +48,7 @@ welcome {{request.user}}
         </li>
         <li> <a href="#">Thesis</a></li>
         <li> <a href="/faculty">Faculty Informations</a></li>
-        <li><a href="Course Information.html">Course Info</a></li>
+        <li><a href="\courseinfo">Course Info</a></li>
         <li> <a href="#">Contract Us</a></li>
         <li> <a href="#">calender</a></li>
         
