--- a/templates/alumni.html
+++ b/templates/alumni.html
@@ -7,7 +7,7 @@ welcome {{request.user}}
 <label for="openSidebar" class="sidebaricon">
     <div class="spinner top"></div>
     <div class="spinner middle"></div>
-    <div class="spinner bottom"></div>
+    <div class ="spinner bottom"></div>
 </label>
 <div id="sidebar">
     <ul class="menu">
@@ -48,66 +48,53 @@ welcome {{request.user}}
         </li>
         <li> <a href="#">Thesis</a></li>
         <li> <a href="/faculty">Faculty Informations</a></li>
-        <li><a href="/courseinfo">Course Info</a></li>
-        <li> <a href="#">Contract Us</a></li>
-        <li> <a href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">calender</a></li>
-        
-
-
+        <li><a href="\courseinfo">Course Info</a></li>
+        <li> <a href="#">Contact Us</a></li>
+        <li> <a href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">Calendar</a></li>
     </ul>
-     
 </div>
 
-<img src="static/pic/study" alt="">
 <div style=" display: flex; justify-content: center; align-items: center; background-color: rgb(233, 245, 250);background-repeat: no-repeat;  height: 100%; padding: 10px 50px;">
     <img src="{{ url_for('static', filename='pic/brac_logo.gif') }}">
 
     <style>
-        .box {
-            position: absolute;
-            top: 36%;
-            left: 19%;
-            transform: translate(-50%, -50%);
-            width: 300px;
-            height: 250px;
-            padding: 50px;
-            box-sizing: border-box;
-            background: rgba(78, 134, 108, 0.5);
-            border-radius: 24px;
+        .popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7);
         }
-    
-        h1 {
-            font-size: 12px;
-            font-weight: bold;
-            color: black;
-            text-align: center;
-        }
-    
-        .form-group label {
-            margin: 0;
-            padding: 0;
-            font-weight: bold;
-            font-size: 17px;
-            color: black;
-        }
-    
-        .form-group input[type="email"],
-        .form-group input[type="text"],
-        .form-group input[type="form-control"] {
-            border: none;
-            border-bottom: 1px solid #fff;
-            background: transparent;
-            outline: none;
-            height: 20px;
-            color: #000; /* Changed text color to black */
-            font-size: 15px;
-        }
-    
-        ::placeholder {
-            color: #9fc6ee;
-            text-decoration: underline;} /* Modified text decoration for placeholders */
 
-        /* Define a class for table rows */
+        .popup-content {
+            background-color: rgb(233, 245, 250);
+            background-image: url(/static/pic/brac_logo.gif);
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 500px;
+            padding: 20px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            height: 500px;
+            transform: translate(-50%, -50%);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        }
+
+        .openButton {
+            margin-top: 20px;
+        }
+
+        .closeButton {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            cursor: pointer;
+        }
+
+            /* Define a class for table rows */
 .table-row {
     background-color: #f0f0f0; /* Set the background color for even rows */
     padding: 10px; /* Add padding to create separation */
@@ -139,53 +126,32 @@ td {
 
 
 
-       
     </style>
-    
-    <div class="box">
-        
-        <form method="post" action="/submit">
-            <label for="course_code">course_code:</label>
-            <input type="text" name="course_code" required><br>
-
-            <label for="num">Serial No: </label>
-            <input type="text" name="num" required><br>
-
-            <label for="comment">FeedBacks:</label>
-            <input type="text" name="comment" required><br>
-    
-            <label for="rating">Rating:</label>
-            <input type="number" name="rating" min="1" max="5" required><br>
-    
-            <button type="submit">Submit</button>
-        </form>
-      
-    </div>
-    <table>
+<table>
+    <tr class="table-row">
+        <th class="col-divider">Name</th>
+    <th class="col-divider">E-mail</th>
+    <th class="col-divider">Company Name</th>
+        <th>Information</th>
+    </tr>
+    <tr>
+        <td colspan="4"><hr></td>
+    </tr>
+    {% for name, email, cname, info in alumnyy %}
         <tr class="table-row">
-            <th class="col-divider">Course Code</th>
-        <th class="col-divider">Resource Serial No</th>
-        <th class="col-divider">FeedBacks</th>
-            <th>Ratings</th>
+            <td>{{ name }}</td>
+            <td>{{ email }}</td>
+            <td>{{ cname }}</td>
+            <td>{{ info }}</td>
         </tr>
         <tr>
             <td colspan="4"><hr></td>
         </tr>
-        {% for course_code, Serial, comment, rating in course_data %}
-            <tr class="table-row">
-                <td>{{ course_code }}</td>
-                <td>{{ Serial }}</td>
-                <td>{{ comment }}</td>
-                <td>{{ rating }}/5</td>
-            </tr>
-            <tr>
-                <td colspan="4"><hr></td>
-            </tr>
-        {% endfor %}
-        
-    </table>
+    {% endfor %}
     
-
+</table>
+    <script src="/static/js/script.js"></script>
 </div>
+
 </body>
 {% endblock body %}
