--- a/templates/alumni.html
+++ b/templates/alumni.html
@@ -132,16 +132,18 @@ td {
         <th class="col-divider">Name</th>
     <th class="col-divider">E-mail</th>
     <th class="col-divider">Company Name</th>
+    <th class="col-divider">Company origin</th>
         <th>Information</th>
     </tr>
     <tr>
         <td colspan="4"><hr></td>
     </tr>
-    {% for name, email, cname, info in alumnyy %}
+    {% for name, email, cname, c_type, info in alumnyy %}
         <tr class="table-row">
             <td>{{ name }}</td>
             <td>{{ email }}</td>
             <td>{{ cname }}</td>
+            <td>{{ c_type }}</td>
             <td>{{ info }}</td>
         </tr>
         <tr>
