--- a/templates/faculty.html
+++ b/templates/faculty.html
@@ -47,8 +47,9 @@
             </ul>
         
         </li>
-        <li> <a href="#">Thesis</a></li>
-        <li><a href="\courseinfo">Course Info</a></li>
+        <li> <a href="/postt">Thesis</a></li>
+        <li> <a href="/faculty">Faculty Informations</a></li>
+        <li><a href="/courseinfo">Course Info</a></li>
         <li> <a href="#">Contract Us</a></li>
         <li> <a href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">calender</a></li>
 
@@ -120,7 +121,7 @@
         </style>
 
         <div class="box">
-                <form  action="{% url 'faculty' %}" method="POST" enctype="multipart/form-data">
+                <!-- <form  action="{% url 'faculty' %}" method="POST" enctype="multipart/form-data">
             
                     <div class="form-group">
                       <label for="{{form.inital.id_for_label}}">Faculty Initial</label>
@@ -143,7 +144,7 @@
                     
                     <button   type="submit" class="btn btn-primary">Submit</button>
                     
-                  </form>
+                  </form> -->
             
             </div>
                 
