--- a/templates/event.html
+++ b/templates/event.html
@@ -1,4 +1,3 @@
-
 {% extends 'base.html' %}
 {% block title %} Home {% endblock title %}
 welcome {{request.user}}
@@ -8,7 +7,7 @@ welcome {{request.user}}
 <label for="openSidebar" class="sidebaricon">
     <div class="spinner top"></div>
     <div class="spinner middle"></div>
-    <div class= "spinner bottom"></div>
+    <div class ="spinner bottom"></div>
 </label>
 <div id="sidebar">
     <ul class="menu">
@@ -55,35 +54,8 @@ welcome {{request.user}}
     </ul>
 </div>
 
-<div class="main">
-    <h2>100 level courses</h2>
-    <hr>
-    
-    <div class="view">
-        <div class="row">
-            <div class="col-12">
-                <table class="table">
-                    <tbody>
-                        {% for course_code, resources in grouped_resources.items() %}
-                            <a><img src="/static/pic/cse1/{{ course_code }}.png" height="200px" alt="Image" class="image"></a>
-                            <div class="popup">
-                                <div class="popup-content">
-                                    <span class="closeButton">&times;</span>
-                                    <h3>Course Code: {{ course_code }}</h3>
-                                    <ul>
-                                        {% for resource in resources %}
-                                            <li><a href="{{ url_for('serve_file', filename=resource.up_file) }}" target="_blank">Show File {{ resource.unique_name }}</a></li>
-                                        {% endfor %}
-                                    </ul>
-                                </div>
-                            </div>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
+<div style=" display: flex; justify-content: center; align-items: center; background-color: rgb(233, 245, 250);background-repeat: no-repeat;  height: 100%; padding: 10px 50px;">
+    <img src="{{ url_for('static', filename='pic/brac_logo.gif') }}">
 
     <style>
         .popup {
@@ -121,11 +93,65 @@ welcome {{request.user}}
             right: 10px;
             cursor: pointer;
         }
-    </style>
 
+            /* Define a class for table rows */
+.table-row {
+    background-color: #f0f0f0; /* Set the background color for even rows */
+    padding: 10px; /* Add padding to create separation */
+}
+
+/* Style the odd rows differently for better readability */
+
+
+/* Add hover effect to highlight rows when hovering over them */
+.table-row:hover {
+    background-color: #e0e0e0;}
+    /* Style columns with a vertical divider */
+/* Style columns with a vertical divider */
+.col-divider {
+    border-right: 2px solid #000; /* Add a 2-pixel wide solid border to the right of the cell */
+    padding-right: 10px; /* Add padding to create separation between the content and the border */
+}
+
+/* Increase the thickness of the row borders to make them more visible */
+table, tr {
+    border-bottom: 2px solid #000;
+
+}
+td {
+        white-space: nowrap; /* Prevent text from wrapping */
+        overflow: hidden; /* Hide text that overflows */
+        text-overflow: ellipsis; /* Display ellipsis (...) for overflowed text */
+    }
+
+
+
+    </style>
+<table>
+    <tr class="table-row">
+        <th class="col-divider">Event Name</th>
+    <th class="col-divider">Event VENUE</th>
+    <th class="col-divider">Event Description</th>
+        <th>Information</th>
+    </tr>
+    <tr>
+        <td colspan="4"><hr></td>
+    </tr>
+    {% for name, venu, edes, info in eventt %}
+        <tr class="table-row">
+            <td>{{ name }}</td>
+            <td>{{ venu }}</td>
+            <td>{{ edes }}</td>
+            <td>{{ info }}</td>
+        </tr>
+        <tr>
+            <td colspan="4"><hr></td>
+        </tr>
+    {% endfor %}
+    
+</table>
     <script src="/static/js/script.js"></script>
 </div>
 
 </body>
 {% endblock body %}
-
