--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,36 +1,42 @@
-*{
+* {
     box-sizing: border-box;
-     
+
 }
-html, body{
+
+html,
+body {
     overflow-x: hidden;
     height: 100%;
 
 }
-body{
-    font-family: Arial,  sans-serif;
+
+body {
+    font-family: Arial, sans-serif;
     background: #fff;
     padding: 0;
     margin: 0;
 }
-.header{
+
+.header {
     background: #072d96;
-    width:100% ;
+    width: 100%;
     height: 70px;
-    position: fixed;
+    /* position: fixed; */
     z-index: 10;
 }
 
 
-.wrapper{
+.wrapper {
     width: 80%;
-    margin:0 auto
+    margin: 0 auto
 }
-.logo{
-    width:20%;
+
+.logo {
+    width: 20%;
     float: left;
 
 }
+
 /* .logo:hover{
     transition: 1s;
     height: 50px;
@@ -39,121 +45,137 @@ body{
 
 
 } */
-.nav{
+.nav {
     width: 70%;
     float: right;
     margin-top: 0px;
 }
-.nav ul{
+
+.nav ul {
     list-style: none;
     font-style: normal;
 
 }
-.nav ul li{
+
+.nav ul li {
     float: left;
 }
-.nav ul li a{
+
+.nav ul li a {
     text-decoration: none;
     color: white;
     padding: 0 15px;
-    font-size:16px
+    font-size: 16px
 }
-.nav ul li a:hover{
+
+.nav ul li a:hover {
     color: white;
     background: #9fc6ee;
     transition: 1s;
     font-size: 20px;
 }
-.searchbar{
-    background: rgba(255,255,255,0.2);
+
+.searchbar {
+    background: rgba(255, 255, 255, 0.2);
     display: flex;
     align-items: center;
     border-radius: 20px;
     padding: 10px 20px;
     /* width: 250px; */
 }
-.searchbar input{
+
+.searchbar input {
     background: transparent;
     flex: 1;
     border: 0;
     outline: none;
 }
-::placeholder{
+
+::placeholder {
     color: #fff;
 }
-.searchbar button{
+
+.searchbar button {
     border: 0;
     border-radius: 50%;
     background: white;
     cursor: pointer;
     height: 21px;
     width: 25px;
-  
+
 
 }
-.searchbar button img{
+
+.searchbar button img {
     background: transparent;
 }
-.main{
+
+.main {
     background-image: url(/static/pic/brac_logo.gif);
-    
-    background-repeat:no-repeat;
+
+    background-repeat: no-repeat;
     height: 100%;
     margin-top: 50px;
     padding: 10px 50px;
     background-position: center;
     background-color: rgb(233, 245, 250);
     background-attachment: fixed;
-    
+
 
 }
-.main  h1{
+
+.main h1 {
     color: rgb(0, 0, 0);
     font-family: Georgia, 'Times New Roman', Times, serif;
-    
+
 }
-.content p{
+
+.content p {
     width: 70%;
-    color:black;
+    color: black;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
-    text-align: justify;   
+    text-align: justify;
     font-weight: bold;
 }
-.main button:hover{
-        color:rgb(9, 45, 87);
-        background: rgb(24, 6, 185);
-        transition: 1s;
-        font-size: large;
-        text-decoration: none;
-        
+
+.main button:hover {
+    color: rgb(9, 45, 87);
+    background: rgb(24, 6, 185);
+    transition: 1s;
+    font-size: large;
+    text-decoration: none;
+
 }
+
 /* .content button{
     text-decoration: none;
 } */
 
-.service1{
+.service1 {
     float: left;
     width: 50%;
     padding-left: 10px;
-   
+
 }
 
-.content{
+.content {
     overflow: hidden;
 }
-.content_img{
+
+.content_img {
     float: left;
     padding: 80px;
 
 }
+
 /* .content_img{
     width: 20px;
     float: left;
 } */
 
 
-#sidebar{
+#sidebar {
     height: 100%;
     position: fixed;
     left: 0;
@@ -161,70 +183,78 @@ body{
     width: 250px;
     margin-top: 40px;
     background: #9fc6ee;
-    transform: translateX(-250px) ;
+    transform: translateX(-250px);
     transition: transform 250ms ease-in-out;
 }
-#openSidebar:checked ~ #sidebar{
+
+#openSidebar:checked~#sidebar {
     transform: translateX(0px);
 }
 
-.menu{
+.menu {
     list-style: none;
     padding: 0;
     margin: 0;
 }
-.menu li{
+
+.menu li {
     color: #fff;
-    border-bottom: 1px solid rgba(255,255,255,0.10);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.10);
 
 }
-.menu li a{
+
+.menu li a {
     color: #030303;
     display: block;
     text-decoration: none;
     text-transform: uppercase;
     padding: 20px;
-    
+
 }
 
-a:hover{
-    background-color:#4682A9;
+a:hover {
+    background-color: #4682A9;
 }
+
 .coursesidebar a:hover {
-    background-color:rgb(233, 245, 250);
-  
-  }
-.menu ul{
+    background-color: rgb(233, 245, 250);
+
+}
+
+.menu ul {
     position: absolute;
     left: 230px;
     width: 250px;
     top: 0;
     display: none;
-    background:  rgb(169, 224, 238);
+    background: rgb(169, 224, 238);
     border-radius: 5px;
-    box-shadow: 2px 2px 10px rgba(0,0,0,.1) ;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, .1);
     size: 50px;
 
 
-  }
-.dropdown{
-    position:relative ;
+}
 
-  }
-.dropdown:hover ul{
+.dropdown {
+    position: relative;
+
+}
+
+.dropdown:hover ul {
     display: initial;
     /* display: block; */
-    background-color:#4682A9;
-    
-  }
-  .dropdown span{
+    background-color: #4682A9;
+
+}
+
+.dropdown span {
     position: absolute;
     right: 20px;
     font-size: 1.5em;
-  }
+}
 
-.sidebaricon{
-    
+.sidebaricon {
+
     width: 22px;
     height: 22px;
     position: absolute;
@@ -233,27 +263,29 @@ a:hover{
     left: 15px;
     cursor: pointer;
 }
-.spinner{
+
+.spinner {
     height: 3px;
     background-color: #fff;
     transition: all 0.3s;
 }
 
 .spinner.middle,
-.spinner.bottom{
+.spinner.bottom {
     margin-top: 3px;
 
 }
-#openSidebar:checked ~ .sidebaricon > .spinner.middle{
+
+#openSidebar:checked~.sidebaricon>.spinner.middle {
     opacity: 0;
 }
 
-#openSidebar:checked ~ .sidebaricon > .spinner.top{
+#openSidebar:checked~.sidebaricon>.spinner.top {
     transform: rotate(135deg);
     margin-top: 8px;
 }
 
-#openSidebar:checked ~ .sidebaricon > .spinner.bottom{
+#openSidebar:checked~.sidebaricon>.spinner.bottom {
     transform: rotate(-135deg);
     margin-top: -9px;
 }
@@ -269,9 +301,9 @@ a:hover{
 }
 
 .popup-content {
-    background-color:rgb(233, 245, 250);
+    background-color: rgb(233, 245, 250);
     background-image: url(pic/brac_logo.gif);
-    background-repeat:no-repeat;
+    background-repeat: no-repeat;
     background-position: center;
     width: 500px;
     padding: 20px;
@@ -293,8 +325,18 @@ a:hover{
     top: 10px;
     right: 10px;
     cursor: pointer;
-    
+
 }
 
-
- 
+.form_box {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    /* height: 600px; */
+    padding: 10px 50px;
+    box-sizing: border-box;
+    background: rgba(78, 134, 108, 0.5);
+    border-radius: 24px;
+}
