--- a/templates/base.html
+++ b/templates/base.html
@@ -1,46 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title> {% block title %} {% endblock title %} BRacu Resources</title>
-        <link rel="stylesheet" href="/static/css/home.css">
-        
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-    </head>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <title> {% block title %} {% endblock title %} BracU Resources</title>
+    <link rel="stylesheet" href="/static/css/home.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+</head>
+
 <body>
-    <div class="header">
-        <div class="wrapper">
-            <div class="logo">
-               
-                <img src="/static/pic/logo.png" alt="logo">
+    <div class="header sticky-top">
+        <div class="wrapper d-flex justify-content-between align-items-center">
+            <!-- side bar and open icon -->
+            <div>
+                <input type="checkbox" class="d-none" id="openSidebar">
+                <label for="openSidebar" class="sidebaricon">
+                    <div class="spinner top"></div>
+                    <div class="spinner middle"></div>
+                    <div class="spinner bottom"></div>
+                </label>
+                <div id="sidebar">
+                    <ul class="menu">
 
+                        <li class="dropdown"><a href="#"> CSE <span>&rsaquo;</span></a>
+                            <ul class="coursesidebar">
+                                <a href="/cse1">100 level courses</a>
+                                <a href="/cse2">200 level courses</a>
+                                <a href="/cse3">300 level courses</a>
+                                <a href="/cse4">400 level courses</a>
+                            </ul>
+
+                        </li>
+
+                        <li class="dropdown"><a href="#"> MNS <span>&rsaquo;</span></a>
+                            <ul class="coursesidebar">
+                                <a href="#">100 level courses</a>
+                                <a href="#">200 level courses</a>
+
+                            </ul>
+
+                        </li>
+                        <li class="dropdown"><a href="#"> COD <span>&rsaquo;</span></a>
+                            <ul class="coursesidebar">
+                                <a href="#">100 level courses</a>
+                                <a href="#">200 level courses</a>
+                                <a href="#">300 level courses</a>
+                            </ul>
+
+                        </li>
+                        <li class="dropdown"><a href="#"> ELECTIVES <span>&rsaquo;</span></a>
+                            <ul class="coursesidebar">
+                                <a href="#">100 level courses</a>
+                                <a href="#">200 level courses</a>
+                                <a href="#">300 level courses</a>
+                            </ul>
+
+                        </li>
+                        <li> <a href="/thesis">Thesis</a></li>
+                        <li> <a href="/faculty">Faculty Informations</a></li>
+                        <li><a href="/courseinfo">Course Info</a></li>
+                        <li> <a href="#">Contact Us</a></li>
+                        <li> <a
+                                href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">Calendar</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+            <img src="/static/pic/logo.png" alt="logo">
+
             <div class="nav">
-                <ul>
+                <ul class="d-flex justify-content-between align-items-center m-0">
                     <li><a href="/index">Home</a></li>
-                    <li><a href="/Add_resources">Add-Resources</a></li>
+                    <li><a href="/add_resources">Resources</a></li>
                     <li><a href="/faculty">Faculties</a></li>
                     <li><a href="/community">Community</a></li>
-                   
-                    
+
+
                     <form action="/search" method="SEARCH" class="searchbar">
                         <input type="text" placeholder="search courses" name="query" id="query">
-                        <button type="submit"> <img src="/static/pic/search.png" height="13px"></button> 
+                        <button type="submit"> <img src="/static/pic/search.png" height="13px"></button>
                     </form>
-                    
+
                 </ul>
             </div>
-
-
         </div>
 
     </div>
 
-    {% block body %} 
+
+    {% block body %}
 
     {% endblock body %}
-
+    <!-- Bootstrap JS and jQuery links (for proper Bootstrap functionality) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/static/js/script.js"></script>
 </body>
+
+</html>
