--- a/templates/intern.html
+++ b/templates/intern.html
@@ -3,58 +3,8 @@
 welcome {{request.user}}
 {% block body %}
 
-<input type="checkbox" id="openSidebar">
-<label for="openSidebar" class="sidebaricon">
-    <div class="spinner top"></div>
-    <div class="spinner middle"></div>
-    <div class ="spinner bottom"></div>
-</label>
-<div id="sidebar">
-    <ul class="menu">
-
-        <li class="dropdown"><a href="#" > CSE <span>&rsaquo;</span></a>
-            <ul class="coursesidebar">
-                 <a href="/cse1">100 level courses</a>
-                 <a href="/cse2">200 level courses</a>
-                <a href="/cse3">300 level courses</a>
-                <a href="/cse4">400 level courses</a>
-            </ul>
-        
-        </li>
-
-        <li class="dropdown"><a href="#" > MNS <span>&rsaquo;</span></a>
-            <ul class="coursesidebar">
-                 <a href="#">100 level courses</a>
-                 <a href="#">200 level courses</a>
-                
-            </ul>
-        
-        </li>
-        <li class="dropdown"><a href="#" > COD <span>&rsaquo;</span></a>
-            <ul class="coursesidebar">
-                 <a href="#">100 level courses</a>
-                 <a href="#">200 level courses</a>
-                <a href="#">300 level courses</a>
-            </ul>
-        
-        </li>
-        <li class="dropdown"><a href="#" > ELECTIVES <span>&rsaquo;</span></a>
-            <ul class="coursesidebar">
-                 <a href="#">100 level courses</a>
-                 <a href="#">200 level courses</a>
-                <a href="#">300 level courses</a>
-            </ul>
-        
-        </li>
-        <li> <a href="/postt">Thesis</a></li>
-        <li> <a href="/faculty">Faculty Informations</a></li>
-        <li><a href="/courseinfo">Course Info</a></li>
-        <li> <a href="#">Contact Us</a></li>
-        <li> <a href="https://www.bracu.ac.bd/sites/default/files/academics/Year-planner/Year%20Planner%202023%20Trimester%20-%20Final%20Version-4.pdf">Calendar</a></li>
-    </ul>
-</div>
-
-<div style=" display: flex; justify-content: center; align-items: center; background-color: rgb(233, 245, 250);background-repeat: no-repeat;  height: 100%; padding: 10px 50px;">
+<div
+    style=" display: flex; justify-content: center; align-items: center; background-color: rgb(233, 245, 250);background-repeat: no-repeat;  height: 100%; padding: 10px 50px;">
     <img src="{{ url_for('static', filename='pic/brac_logo.gif') }}">
 
     <style>
@@ -94,50 +44,60 @@ welcome {{request.user}}
             cursor: pointer;
         }
 
-            /* Define a class for table rows */
-.table-row {
-    background-color: #f0f0f0; /* Set the background color for even rows */
-    padding: 10px; /* Add padding to create separation */
-}
+        /* Define a class for table rows */
+        .table-row {
+            background-color: #f0f0f0;
+            /* Set the background color for even rows */
+            padding: 10px;
+            /* Add padding to create separation */
+        }
 
-/* Style the odd rows differently for better readability */
-
-
-/* Add hover effect to highlight rows when hovering over them */
-.table-row:hover {
-    background-color: #e0e0e0;}
-    /* Style columns with a vertical divider */
-/* Style columns with a vertical divider */
-.col-divider {
-    border-right: 2px solid #000; /* Add a 2-pixel wide solid border to the right of the cell */
-    padding-right: 10px; /* Add padding to create separation between the content and the border */
-}
-
-/* Increase the thickness of the row borders to make them more visible */
-table, tr {
-    border-bottom: 2px solid #000;
-
-}
-td {
-        white-space: nowrap; /* Prevent text from wrapping */
-        overflow: hidden; /* Hide text that overflows */
-        text-overflow: ellipsis; /* Display ellipsis (...) for overflowed text */
-    }
+        /* Style the odd rows differently for better readability */
 
 
+        /* Add hover effect to highlight rows when hovering over them */
+        .table-row:hover {
+            background-color: #e0e0e0;
+        }
 
+        /* Style columns with a vertical divider */
+        /* Style columns with a vertical divider */
+        .col-divider {
+            border-right: 2px solid #000;
+            /* Add a 2-pixel wide solid border to the right of the cell */
+            padding-right: 10px;
+            /* Add padding to create separation between the content and the border */
+        }
+
+        /* Increase the thickness of the row borders to make them more visible */
+        table,
+        tr {
+            border-bottom: 2px solid #000;
+
+        }
+
+        td {
+            white-space: nowrap;
+            /* Prevent text from wrapping */
+            overflow: hidden;
+            /* Hide text that overflows */
+            text-overflow: ellipsis;
+            /* Display ellipsis (...) for overflowed text */
+        }
     </style>
-<table>
-    <tr class="table-row">
-        <th class="col-divider">Company Name</th>
-    <th class="col-divider">Position</th>
-    <th class="col-divider">Requirements</th>
-        <th>Information</th>
-    </tr>
-    <tr>
-        <td colspan="4"><hr></td>
-    </tr>
-    {% for name, pos, req, info in internn %}
+    <table class="form_box">
+        <tr class="table-row">
+            <th class="col-divider">Company Name</th>
+            <th class="col-divider">Position</th>
+            <th class="col-divider">Requirements</th>
+            <th>Information</th>
+        </tr>
+        <tr>
+            <td colspan="4">
+                <hr>
+            </td>
+        </tr>
+        {% for name, pos, req, info in internn %}
         <tr class="table-row">
             <td>{{ name }}</td>
             <td>{{ pos }}</td>
@@ -145,17 +105,14 @@ td {
             <td>{{ info }}</td>
         </tr>
         <tr>
-            <td colspan="4"><hr></td>
+            <td colspan="4">
+                <hr>
+            </td>
         </tr>
-    {% endfor %}
+        {% endfor %}
+
+    </table>
     
-</table>
-    <script src="/static/js/script.js"></script>
 </div>
 
-</body>
-<<<<<<< HEAD
 {% endblock body %}
-=======
-{% endblock body %}
->>>>>>> 427f2033a2b9c82e4d0cce5a1756a7b3ef8a6378
