--- a/templates/view.html
+++ b/templates/view.html
@@ -3,68 +3,71 @@
 welcome {{request.user}}
 {% block body %}
 <style>
-  .view{
-      position: absolute;
-      top:50%;
-      left: 80%;
-      transform: translate(-50%,-50%);
-      width: 500px;
-      height: 500px;
-      padding: 50px 50px;
-      box-sizing:border-box;
-      background:rgb(0,0,0,5);
-      background: transparent;
-      background-color:rgba(78, 134, 108, 0.5);
-      
-  }    
-  h1{
-      margin:top ;
+    .view {
+        position: absolute;
+        top: 50%;
+        left: 80%;
+        transform: translate(-50%, -50%);
+        width: 500px;
+        height: 500px;
+        padding: 50px 50px;
+        box-sizing: border-box;
+        background: rgb(0, 0, 0, 5);
+        background: transparent;
+        background-color: rgba(78, 134, 108, 0.5);
 
-  font-size: xx-large;
-  font-style:normal;
-  color: black;
-  text-align: center;
-  font-weight: bold;
-  }
-  .form-group label{
-      margin: 0;
-      padding: 0 0 10px;
-      font-weight: bold;
-      font-size: 20px;
-      color:black;
-      
-  }
-  .form-group  input[type="email"],
-  .form-group  input[type="form-control"]{
-      border: none;
-       border-bottom: 1px solid #fff;
+    }
 
-      background: transparent;
-      outline: none;
-      height: 20px;
-      color: #fff;
-      font-size:  20px;
-      
-      
-  }
+    h1 {
+        margin: top;
+
+        font-size: xx-large;
+        font-style: normal;
+        color: black;
+        text-align: center;
+        font-weight: bold;
+    }
+
+    .form-group label {
+        margin: 0;
+        padding: 0 0 10px;
+        font-weight: bold;
+        font-size: 20px;
+        color: black;
+
+    }
+
+    .form-group input[type="email"],
+    .form-group input[type="form-control"] {
+        border: none;
+        border-bottom: 1px solid #fff;
+
+        background: transparent;
+        outline: none;
+        height: 20px;
+        color: #fff;
+        font-size: 20px;
 
 
-  ::placeholder{
-      color:#9fc6ee;
-      text-decoration:double;
-  }
+    }
 
+
+    ::placeholder {
+        color: #9fc6ee;
+        text-decoration: double;
+    }
 </style>
 <div class="view">
     <div class="row">
         <div class="col-12">
 
             <table class="table">
-             
+
                 <tbody>
                     {% for resource in all_resource %}
                     <a href="{{ url_for('download', filename=resource.filename) }}" target="_blank">Download File</a>
-<a href="{{ url_for('serve_file', filename=resource.up_file) }}" target="_blank"> show_file {{resource.unique_name}}</a>
+                    <a href="{{ url_for('serve_file', filename=resource.up_file) }}" target="_blank"> show_file
+                        {{resource.unique_name}}</a>
 
 
                     <!-- {% for resource  in all_resource %}
@@ -81,9 +84,9 @@ welcome {{request.user}}
   
                     {% endfor %} -->
                     {% endfor %}
-                  
+
                 </tbody>
-              </table>
+            </table>
 
 
 
